Fixed alignment of faq

--- a/scripts/main.css
+++ b/scripts/main.css
@@ -60,7 +60,7 @@ h4 {
     text-align: center;
     font-family: Dodger;
 }
-div.fluid-container p {
+div.fluid-container p, div.fluid-container ul {
 	text-align:justify;
 	padding-left:150px;
 	padding-right:150px;
